--- a/src/app/items-list/items-list.html
+++ b/src/app/items-list/items-list.html
@@ -1,4 +1,4 @@
-<h2>Projects</h2>
+<h2>Список проєктів</h2>
 
 <input
   type="text"
@@ -8,7 +8,7 @@
 
 <div class="list">
   <app-item-card
-    *ngFor="let project of projects"
+    *ngFor="let project of projects$ | async"
     [project]="project"
     (select)="onProjectSelected($event)">
   </app-item-card>
