--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,18 @@
-<header>
+<div class="app-container">
   <h1>{{ title }}</h1>
+
   <nav>
-    <a routerLink="/items">Список</a>
+    <button routerLink="/items" class="nav-btn">Список</button>
+    <button routerLink="/items/new" class="nav-btn">Додати новий</button>
+    <button (click)="runAllTests()" class="test-btn">▶ Запустити тести</button>
   </nav>
-</header>
 
-<main>
   <router-outlet></router-outlet>
-</main>
 
-<footer>
-  <p>© 2025 My App</p>
-</footer>
+  <div *ngIf="testResults.length > 0" class="test-results">
+    <h3>Результати тестів:</h3>
+    <ul>
+      <li *ngFor="let res of testResults">{{ res }}</li>
+    </ul>
+  </div>
+</div>
